Physics_RT/Physics_RT/MathHeader.h

	typedef struct hkVector4* hkVector4Ref;
    typedef struct hkQuaternion* hkQuaternionRef;
    typedef struct hkMatrix3* hkMatrix3Ref;
    typedef struct hkRotation* hkRotationRef;
    HAVOK_C_API hkQuaternionRef HAVOK_C_CALL hkQuaternion_new();
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_delete(hkQuaternionRef ptr);
    HAVOK_C_API hkQuaternionRef HAVOK_C_CALL hkQuaternion_new_xyzr(float x, float y, float z, float r);
    HAVOK_C_API hkQuaternionRef HAVOK_C_CALL hkQuaternion_new_axis(hkVector4Ref axis, float angle);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_set(hkQuaternionRef ptr, float x, float y, float z, float r);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setIdentity(hkQuaternionRef ptr);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setInverse(hkQuaternionRef ptr, hkQuaternionRef q);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setMul(hkQuaternionRef ptr, float r, hkQuaternionRef q);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_addMul(hkQuaternionRef ptr, float r, hkQuaternionRef q);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setMul(hkQuaternionRef ptr, hkQuaternionRef q0, hkQuaternionRef q1);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_mul(hkQuaternionRef ptr, hkQuaternionRef q);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setMulInverse(hkQuaternionRef ptr, hkQuaternionRef q0, hkQuaternionRef q1);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setInverseMul(hkQuaternionRef ptr, hkQuaternionRef q0, hkQuaternionRef q1);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_estimateAngleTo(hkQuaternionRef ptr, hkQuaternionRef to, hkVector4Ref angleOut);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setAxisAngle(hkQuaternionRef ptr, hkVector4Ref axis, float angle);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setFromEulerAngles(hkQuaternionRef ptr, float roll, float pitch, float yaw);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_removeAxisComponent(hkQuaternionRef ptr, hkVector4Ref axis);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_decomposeRestAxis(hkQuaternionRef ptr, hkVector4Ref axis, hkQuaternionRef restOut, float angleOut);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setSlerp(hkQuaternionRef ptr, hkQuaternionRef q0, hkQuaternionRef q1, float t);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setBarycentric(hkQuaternionRef ptr, hkQuaternionRef qVerts, hkVector4Ref vLambda);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setReal(hkQuaternionRef ptr, float r);
    HAVOK_C_API float HAVOK_C_CALL hkQuaternion_getReal(hkQuaternionRef ptr);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setImag(hkQuaternionRef ptr, hkVector4Ref i);
    HAVOK_C_API hkVector4Ref HAVOK_C_CALL hkQuaternion_getImag(hkQuaternionRef ptr);
    HAVOK_C_API float HAVOK_C_CALL hkQuaternion_getAngle(hkQuaternionRef ptr);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_getAxis(hkQuaternionRef ptr, hkVector4Ref axis);
    HAVOK_C_API bool HAVOK_C_CALL hkQuaternion_hasValidAxis(hkQuaternionRef ptr);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setClosest(hkQuaternionRef ptr, hkQuaternionRef q, hkQuaternionRef qReference);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_setFlippedRotation(hkQuaternionRef ptr, hkVector4Ref from);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_normalize(hkQuaternionRef ptr);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_operator_equal(hkQuaternionRef ptr, hkQuaternionRef a);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_get_m_vec(hkQuaternionRef ptr, hkVector4Ref out);
    HAVOK_C_API void HAVOK_C_CALL hkQuaternion_set_m_vec(hkQuaternionRef ptr, hkVector4Ref out);
    HAVOK_C_API bool HAVOK_C_CALL hkQuaternion_isOk(hkQuaternionRef ptr, float epsilon = float(1e-3f));
    HAVOK_C_API bool HAVOK_C_CALL hkMatrix3_isApproximatelyEqual(hkMatrix3Ref ptr, hkMatrix3Ref m, float epsilon = float(1e-3f));
    HAVOK_C_API bool HAVOK_C_CALL hkMatrix3_isSymmetric(hkMatrix3Ref ptr, float epsilon = float(1e-3f));
    HAVOK_C_API bool HAVOK_C_CALL hkRotation_isOrthonormal(hkRotationRef ptr, float epsilon = float(1e-5f));